--- a/style.css
+++ b/style.css
@@ -1,7 +1,144 @@
+/*
+BROWN #A47A51
+SAND #C6B098
+LIGHTBLUE #DBE8F1
+BLUE #15AFD8
+DARKBLUE #1D6A87
+#402722
+*/
+
+body{
+	background-image: url("resources/lightWoodBackground.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 #menu
 {
+	top: 0;
+	left: 0;
+	display: flex;
+	place-content: center;
+	white-space: nowrap;
+	padding-bottom: 0.5%;
+	padding-top: .5%;
 	position: fixed;
 	width: 100%;
-	height: 35px;
-	background: white;
+	height: 2.25rem;
+	background-image: url("resources/darkWood.jpg");
+	box-shadow: -1px 10px 10px 5px #251919;
+}
+
+#menu .menuitem{
+	padding-top: 0.25%;
+	padding-right: 1.5%;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 1.3rem;
+	font-weight: 700;
+	font-style: italic;
+	font-variant: normal;
+	text-transform: capitalize;
+}
+
+#menu .menuitem :link{
+	color: #15AFD8;
+}
+#menu .menuitem :visited{
+	color: #1D6A87;
+}
+#menu .menuitem :hover{
+	color: #DBE8F1;
+}
+
+.logo{
+	display: grid;
+	place-content: center;
+	position: absolute;
+	float: left;
+	width: 2%;
+	font-size: x-small;
+	top: 0;
+	left: 0;
+	padding-left: 2%;
+	padding-top: .25%;
+	padding-right: 20%;
+	color: #15AFD8;
+
+}
+
+.logo img{
+	width: 100%;
+}
+
+#about{
+	margin-top: 5rem;
+}
+
+section h1{
+	text-align: center;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 1.5rem;
+	color: #1D6A87;
+	font-weight: 900;
+	font-style: italic;
+	font-variant: normal;
+	text-transform: capitalize;
+	position: relative;
+	z-index: -1;
+}
+
+section h1::before, h1::after{
+
+	content: '';
+	display: block;
+	position: absolute;
+	top: 31%;
+	z-index: -2;
+	width: 43%;
+	height: 100%;
+	max-height: 0.625rem;
+	background-image: url("resources/darkWood.jpg");
+	box-shadow: 0px 0px 5px 2px #251919;
+}
+
+section h1::before{
+
+	right: 0;
+}
+
+#photos div{
+
+	display: flex;
+	place-content: center;
+}
+
+#photos img{
+
+	border-radius: 11%;
+}
+
+#photos img + img{
+
+	margin-left: 10%;
+}
+
+#playlist div{
+	display: flex;
+	place-content: center;
+}
+
+#playlist iframe{
+	width: 70rem;
+	height: 40rem;
+
+}
+
+#like{
+	text-align: center;
+}
+
+#qrcoder{
+
+	text-align: center;
 }
