--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
 	color: #15AFD8;
 }
 #menu .menuitem :visited{
-	color: #1D6A87;
+	color: #15AFD8;
 }
 #menu .menuitem :hover{
 	color: #DBE8F1;
@@ -159,6 +159,10 @@ section h1::before{
 	text-align: center;
 }
 
+.fb-like {
+    z-index: -1;
+}
+
 #spa ol{
 
 	padding: 0.25rem 1.5rem;
@@ -209,20 +213,62 @@ section h1::before{
 }
 
 #contact :is(input[type=text], textarea) {
+    display: flex;
+    width: 99%;
+    padding: 0.5em;
     margin: 0.5em;
     border: 2px solid #a58669;
     border-radius: 0.25em;
     outline: none;
-    padding: 0.25em;
     box-sizing: border-box;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: medium;
     transition: .25s;
-}
-
-#contact input[type=text]{
-	width: 93%;
 }
 
 #contact :is(input[type=text], textarea):focus {
     border-color: #8E6137;
-    box-shadow: 0 0 20px -0.2em rgb(0 0 0 / 20%);
+    box-shadow:  0 0 20px 2px rgba(142, 97, 55,0.5);
+}
+
+#contact .btn-parent {
+    display: flex;
+    place-content: center;
+}
+
+#contact .btn + .btn {
+    margin-left: 5em;
+}
+
+#contact .btn {
+    padding: 1em 4em;
+    margin-bottom: 1em;
+    min-width: 14em;
+    background: #D5B688;
+    border: 2px solid #a58669;
+    border-radius: 0.625em / 0.625em;
+    box-shadow: 0 0.25em 0.625em rgb(37, 25, 25);
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    transition: 0.3s;
+    outline: none;
+    box-sizing: border-box;
+}
+
+#contact .btn:hover {
+
+	border-color: #8E6137;
+	font-weight: bold;
+	font-size: 1.05em;
+	box-shadow: 0 0.5em 1em rgba(37, 25, 25, 0.7);
+}
+
+#contact .btn:focus {
+	
+	border-color: #8E6137;
+	font-weight: bold;
+	font-size: 1em;
+	box-shadow: inset 0 0.25em 1em -0.1em rgba(37, 25, 25, 0.7);
+	transition: 0.6s;
 }
